radio buttons functionality

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </span>
                     </div>
                     <!-- 25 questions radio input -->
-                    <div class="radio-container selected-label">
+                    <div class="radio-container">
                         <label for="value-25">25 Questions</label>
                         <input type="radio" name="questions" value="25" id="value-25">
                         <span class="best-score">
