add equations to DOM

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="card" id="game-page" hidden>
             <!-- Item Container -->
             <div class="item-container">
-                <div class="selected-item"></div>
+                <!-- <div class="selected-item"></div>
                 <div class="item">
                     <h1>3 x 3 = 30</h1>
                 </div>
@@ -93,7 +93,7 @@
                 </div>
                 <div class="item">
                     <h1>3 x 3 = 30</h1>
-                </div>
+                </div> -->
             </div>
             <!-- Right/Wrong Buttons -->
             <div class="item-footer">
